tests/init_state/overwrite/overwrite_non_drop_linear_errors.err.expected
error: at 8:13: [INIT-OverwriteWithoutDrop] In function 'f', block 'entry': cannot overwrite 'y': type Linear is not Drop and the value is still live (consume it via `drop y` first)
   |
 8 |             y = move x2;
   |             ^^^^^^^^^^^
